fix: 4px gap for small inlinemessage (#5031)

--- a/@navikt/core/css/src/inline-message.css
+++ b/@navikt/core/css/src/inline-message.css
@@ -2,6 +2,10 @@
   display: flex;
   gap: var(--ax-space-8);
   color: var(--ax-text-default);
+
+  &[data-size="small"] {
+    gap: var(--ax-space-4);
+  }
 }
 
 .aksel-inline-message__icon {
